<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android" >

    <PreferenceCategory android:title="@string/pref_authentication" >

        <EditTextPreference
            android:key="@string/pref_username_key"
            android:summary="@string/pref_username_msg"
            android:title="@string/pref_username_title" />

        <EditTextPreference
            android:inputType="textPassword"
            android:key="@string/pref_password_key"
            android:summary="@string/pref_password_msg"
            android:title="@string/pref_password_title" />
    </PreferenceCategory>

    <PreferenceCategory android:title="@string/pref_backup_restore" >

        <Preference
            android:key="@string/pref_backup_key"
            android:summary="@string/pref_backup_msg"
            android:title="@string/pref_backup_title" />

        <Preference
            android:key="@string/pref_restore_key"
            android:summary="@string/pref_restore_msg"
            android:title="@string/pref_restore_title" />
    </PreferenceCategory>

    <PreferenceCategory android:title="@string/pref_info" >

        <Preference
            android:key="@string/pref_about_key"
            android:summary="@string/pref_about_msg"
            android:title="@string/pref_about_title" />
    </PreferenceCategory>

</PreferenceScreen>