<?xml version="1.0" encoding="utf-8"?>
<ScrollView 
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:scrollbars="none"
    android:fillViewport="true"
    android:background="@color/background">
    <LinearLayout
        android:orientation="vertical"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content">
        <TextView 
            android:id="@+id/player_name"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:textColor="@color/title"
            android:textSize="18dp"
            android:textStyle="bold"/>
        <include layout="@layout/player_details_main"/>
        <include layout="@layout/row_more" android:id="@+id/more_training"/>
        <include layout="@layout/row"/>
        <TextView 
            android:id="@+id/player_positions_title"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:gravity="center"
            android:text="@string/player_positions"
            android:textSize="16dp"
            android:textColor="@color/text"
            android:textStyle="bold"
            android:background="@color/titleBackground"/>
        <TableLayout 
            android:id="@+id/player_positions_table"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:stretchColumns="0"
            android:visibility="gone"/>
        <RelativeLayout 
            android:id="@+id/player_positions_button"
            android:layout_width="fill_parent"
            android:layout_height="16dp"
            android:background="@android:drawable/list_selector_background">
            <ImageView 
                android:id="@+id/player_positions_arrow"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:src="@drawable/ic_more_arrow_down" 
                android:contentDescription="@string/content_desc_arrow_down"/>
        </RelativeLayout>
        <include layout="@layout/row"/>
        <TextView 
            android:id="@+id/player_notes_title"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:gravity="center"
            android:text="@string/player_notes"
            android:textSize="16dp"
            android:textColor="@color/text"
            android:textStyle="bold"
            android:background="@color/titleBackground"/>
        
        <FrameLayout 
            android:id="@+id/player_notes"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="5dp">            
            <RelativeLayout 
                android:id="@+id/player_notes_show"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content">
                <ImageView 
                    android:id="@+id/player_notes_button"
                    android:layout_width="25dp"
                    android:layout_height="25dp"
                    android:layout_marginRight="5dp"
                    android:layout_marginBottom="5dp"
                    android:layout_alignParentRight="true"
                    android:layout_alignParentBottom="true"
                    android:src="@android:drawable/ic_menu_edit"
                    android:contentDescription="@string/content_desc_edit_notes"/>
                <TextView 
                    android:id="@+id/player_notes_text"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_toLeftOf="@+id/player_notes_button"
                    android:layout_margin="5dp"
                    android:hint="@string/player_notes_empty"/>
            </RelativeLayout>
            <RelativeLayout 
                android:id="@+id/player_notes_edit"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:visibility="gone" >
                <EditText 
                    android:id="@+id/player_notes_edittext"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:inputType="textMultiLine"/>
                <ImageView 
                    android:id="@+id/player_notes_ok"
                    android:layout_width="25dp"
                    android:layout_height="25dp"
                    android:layout_marginLeft="5dp"
                    android:layout_marginBottom="5dp"
                    android:layout_below="@+id/player_notes_edittext"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentBottom="true"
                    android:src="@android:drawable/ic_menu_add" 
                    android:contentDescription="@string/content_desc_edit_notes"/>
                <ImageView 
                    android:id="@+id/player_notes_cancel"
                    android:layout_width="25dp"
                    android:layout_height="25dp"
                    android:layout_marginRight="5dp"
                    android:layout_marginBottom="5dp"
                    android:layout_below="@+id/player_notes_edittext"
                    android:layout_alignParentRight="true"
                    android:layout_alignParentBottom="true"
                    android:src="@android:drawable/ic_menu_close_clear_cancel"
                    android:contentDescription="@string/content_desc_edit_notes"/>
            </RelativeLayout>
        </FrameLayout>
        <include layout="@layout/row"/>
    </LinearLayout>
</ScrollView>